--- a/doc/library.bib
+++ b/doc/library.bib
@@ -5,11 +5,18 @@
   url = {https://www.cirrus.ac.uk},
 }
 
-@misc{ifort,
+@misc{ifort18,
   author = {{Intel}},
   title  = {{Intel Fortran Compiler 18.0 for Linux}},
   year   = 2018,
   url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-180-for-linux-release-notes-for-intel-parallel-studio-xe-2018}
+}
+
+@misc{ifort19,
+  author = {{Intel}},
+  title  = {{Intel Fortran Compiler 19.0 for Linux}},
+  year   = 2019,
+  url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-190-for-linux-release-notes-for-intel-parallel-studio-xe-2019#new_features},
 }
 
 @misc{gfortran,
@@ -17,4 +24,15 @@
   title={{The GNU Fortran Compiler}},
   year=2019,
   url={https://gcc.gnu.org/onlinedocs/gcc-4.8.5/gfortran/}
+}
+
+@book{feynman1963,
+publisher = {Addison-Wesley Pub. Co.},
+isbn = {0201020106},
+year = {1963},
+title = {The Feynman lectures on physics},
+language = {eng},
+address = {Reading, Mass. ; London},
+author = {Feynman, Richard P. (Richard Philipps)},
+keywords = {Physics},
 }
