--- a/doc/library.bib
+++ b/doc/library.bib
@@ -5,6 +5,13 @@
   url = {https://www.cirrus.ac.uk},
 }
 
+@misc{cirrus_hardware,
+  author = {{EPCC}},
+  title = {{Cirrus Hardware}},
+  year = 2020,
+  url = {http://www.cirrus.ac.uk/about/hardware.html},
+}
+
 @misc{ifort18,
   author = {{Intel}},
   title  = {{Intel Fortran Compiler 18.0 for Linux}},
@@ -19,11 +26,18 @@
   url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-190-for-linux-release-notes-for-intel-parallel-studio-xe-2019#new_features},
 }
 
-@misc{gfortran,
-  author={{GNU Compiler Collection Team}},
-  title={{The GNU Fortran Compiler}},
-  year=2019,
-  url={https://gcc.gnu.org/onlinedocs/gcc-4.8.5/gfortran/}
+@misc{avx2,
+  author={Mark Buxton},
+  title={{Haswell New Instruction Descriptions Now Available!}},
+  year=2011,
+  url={https://software.intel.com/en-us/blogs/2011/06/13/haswell-new-instruction-descriptions-now-available/},
+}
+
+@misc{fortran_formats,
+  author={C. K. Shene},
+  title={{Fortran Formats}},
+  year=2020,
+  url={https://pages.mtu.edu/~shene/COURSES/cs201/NOTES/chap05/format.html},
 }
 
 @book{feynman1963,
