--- a/doc/library.bib
+++ b/doc/library.bib
@@ -1,26 +1,26 @@
 @misc{cirrus,
-  author = {{EPCC}},
+  author = {EPCC},
   title = {{Cirrus}},
   year = 2020,
   url = {https://www.cirrus.ac.uk},
 }
 
 @misc{cirrus_hardware,
-  author = {{EPCC}},
+  author = {EPCC},
   title = {{Cirrus Hardware}},
   year = 2020,
   url = {http://www.cirrus.ac.uk/about/hardware.html},
 }
 
 @misc{ifort18,
-  author = {{Intel}},
+  author = {Intel},
   title  = {{Intel Fortran Compiler 18.0 for Linux}},
   year   = 2018,
   url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-180-for-linux-release-notes-for-intel-parallel-studio-xe-2018}
 }
 
 @misc{ifort19,
-  author = {{Intel}},
+  author = {Intel},
   title  = {{Intel Fortran Compiler 19.0 for Linux}},
   year   = 2019,
   url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-190-for-linux-release-notes-for-intel-parallel-studio-xe-2019#new_features},
@@ -33,11 +33,39 @@
   url={https://software.intel.com/en-us/blogs/2011/06/13/haswell-new-instruction-descriptions-now-available/},
 }
 
+@misc{fortran_common,
+  author={David Harper and L. M. Stockman},
+  title={{COMMON Blocks, BLOCK DATA and EQUIVALENCE}},
+  year=2020,
+  url={https://www.obliquity.com/computer/fortran/common.html},
+}
+
+@misc{fpp,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fpp},
+}
+
+@misc{fortran_modules,
+  author={Parviz Moin},
+  year=2002,
+  title={{Modules}},
+  url={https://web.stanford.edu/class/me200c/tutorial_90/09_modules.html},
+}
+
 @misc{fortran_formats,
   author={C. K. Shene},
   title={{Fortran Formats}},
   year=2020,
   url={https://pages.mtu.edu/~shene/COURSES/cs201/NOTES/chap05/format.html},
+}
+
+@misc{fortran_free_fixed,
+  author={Adrian Sandu},
+  title={{Free vs. Fixed Formats}},
+  year=2001,
+  url={http://people.cs.vt.edu/~asandu/Courses/MTU/CS2911/fortran_notes/node4.html},
 }
 
 @book{feynman1963,
