--- a/doc/library.bib
+++ b/doc/library.bib
@@ -19,6 +19,13 @@
   url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-180-for-linux-release-notes-for-intel-parallel-studio-xe-2018}
 }
 
+@misc{user389,
+  author = {User389},
+  title={{Intel Fortran Compiler: tips on optimization at compilation}},
+  year=2020,
+  url={https://scicomp.stackexchange.com/questions/265/intel-fortran-compiler-tips-on-optimization-at-compilation},
+}
+
 @misc{ifort19,
   author = {Intel},
   title  = {{Intel Fortran Compiler 19.0 for Linux}},
@@ -42,9 +49,51 @@
 
 @misc{fpp,
   author={Intel},
-  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference}},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- fpp}},
   year=2019,
   url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fpp},
+}
+
+@misc{o,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- O}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-o},
+}
+
+@misc{xhost,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- xHost}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-xhost-qxhost},
+}
+
+@misc{ipo,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- ipo}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-ipo-qipo},
+}
+
+@misc{ofast,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- Ofast}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-ofast},
+}
+
+@misc{no_prec_div,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- prec-div}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-prec-div-qprec-div},
+}
+
+@misc{fp_model,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- fp-model}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fp-model-fp},
 }
 
 @misc{fortran_modules,
