--- a/doc/library.bib
+++ b/doc/library.bib
@@ -12,6 +12,16 @@
   url = {http://www.cirrus.ac.uk/about/hardware.html},
 }
 
+@inproceedings{chiu_et_al_2011,
+author = {Chiu, Matt and Khan, Md and Herbordt, Martin},
+year = {2011},
+month = {06},
+pages = {73 - 76},
+title = {Efficient Calculation of Pairwise Nonbonded Forces},
+journal = {Proceedings - IEEE International Symposium on Field-Programmable Custom Computing Machines, FCCM 2011},
+doi = {10.1109/FCCM.2011.34}
+}
+
 @misc{ifort18,
   author = {Intel},
   title  = {{Intel Fortran Compiler 18.0 for Linux}},
