paragraph on hand inlining

--- a/doc/library.bib
+++ b/doc/library.bib
@@ -71,6 +71,13 @@ doi = {10.1109/FCCM.2011.34}
   url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-o},
 }
 
+@misc{qopt_report,
+  author={Intel},
+  title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- qopt-report}},
+  year=2019,
+  url={https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-qopt-report-qopt-report},
+}
+
 @misc{xhost,
   author={Intel},
   title={{Intel Fortran Compiler 19.1 Developer Guide and Reference -- xHost}},
