changes without pairwise forces

--- a/doc/library.bib
+++ b/doc/library.bib
@@ -12,6 +12,18 @@
   url = {http://www.cirrus.ac.uk/about/hardware.html},
 }
 
+@book{patterson_2014,
+publisher = {Elsevier Science \& Technology},
+isbn = {9780124078864},
+year = {2014},
+title = {Computer organization and design : the hardware/software interface},
+edition = {Fifth edition..},
+language = {eng},
+address = {Saint Louis},
+author = {Patterson, David A.},
+keywords = {Computer organization; System design -- Data processing; Computer architecture},
+}
+
 @inproceedings{chiu_et_al_2011,
 author = {Chiu, Matt and Khan, Md and Herbordt, Martin},
 year = {2011},
