added vtune stuff

--- a/doc/library.bib
+++ b/doc/library.bib
@@ -41,6 +41,13 @@ doi = {10.1109/FCCM.2011.34}
   url    = {https://software.intel.com/en-us/articles/intel-fortran-compiler-180-for-linux-release-notes-for-intel-parallel-studio-xe-2018}
 }
 
+@misc{vtune,
+  author = {Intel},
+  title  = {{Intel VTune Profiler 19}},
+  year   = 2020,
+  url    = {https://software.intel.com/en-us/vtune}
+}
+
 @misc{user389,
   author = {User389},
   title={{Intel Fortran Compiler: tips on optimization at compilation}},
